
5.2a2 -> 5.2a3:
    - proyvind: Mandriva: make directory & symlink dependencies optional with
        %{_check_symlink_deps} & %{_check_dirname_deps}. (optional-dirname-and-symlink-deps)
    - proyvind: Mandriva: prefer file extension for detecting file compression.
        (extension-based-compression-detection)
    - proyvind: Mandriva: disable buildrequires checking for building src.rpms.
        (no-deps-on-building-srpms)
    - proyvind: Mandriva: disable preservation of file ownership for source rpms.
        (no-owner-group-on-srpm-install)
    - rpm.org: Add posix.mkstemp() to Lua posix lib.
    - jbj: fix: apply _dependency_whiteout to erased relations too.
    - jbj: lua: display rudimentary info about lua with --showrc.
    - jbj: lua: preload "crypto" in rpmlua.c.
    - jbj: lua: lom.lua has requires("lxp"), so preload "lxp" in rpmlua.c.
    - jbj: WRlua: preserve forward linkage by avoiding vmefail/get_date.
    - jbj: lua: add virgin luasocket-2.0.2 lua bindings (unused atm).
    - jbj: lua: add license, and compile lxplib.
    - jbj: lua: add lom.lua wrapper for lxplib.
    - jbj: lua: diddle bin2c.c to permit multiple *.lua args.
    - jbj: lua: add virgin lxplib lua bindings (unused atm).
    - jbj: lua: add license, hotwire CRYPTO_OPENSSL, and compile lcrypto.
    - jbj: lua: add virgin lcrypto lua bindings (unused atm).
    - jbj: lua: ensure that internal lua has all the right files.
    - jbj: add a relation to to force install-before-erase.
    - jbj: display dependency loops as an error for now.
    - rpm.org: add %{_default_patch_fuzz} macro for patch --fuzz
    - afb: make buildroot path configurable, but keep old defaults
    - rpm.org: add %{_buildrootdir} macro for use with %{buildroot}

5.2a1 -> 5.2a2:
    - jbj: permit --whatconflicts/--whatobsoletes to be displayed with --help.
    - jbj: add flag to keep trailing slash in dirnames dependency set.
    - jbj: fix a memory leak by calling mireClean().